configure project for jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,18 @@
 {
   "compilerOptions": {
-    "module": "es2022",
+    "target": "es2020",
+    "module": "commonjs",
     "moduleResolution": "node",
     "baseUrl": "src",
     "outDir": "./dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@test/*": ["../tests/*"]
+    }
   },
   "ts-node": {
     "esm": true
-  }
+  },
+  "include": ["src", "tests"]
 }
