--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "freebookstore-api-ts",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/server"
+    "dev": "tsx watch src/server",
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,14 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/http-status": "^1.1.2",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "prisma": "^4.12.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "tsx": "^3.12.6",
     "typescript": "^5.0.3"
   },
