--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx watch src/server",
-    "test": "jest --passWithNoTests"
+    "test": "NODE_ENV=test jest --passWithNoTests",
+    "test:migration:generate": "dotenv -e .env.test prisma migrate dev",
+    "test:coverage": "npm run test -- --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/T9-Driven/freebookstore-api-ts#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
@@ -29,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/pg": "^8.6.6",
     "@types/supertest": "^2.0.12",
+    "dotenv-cli": "^7.2.1",
     "jest": "^29.5.0",
     "prisma": "^4.12.0",
     "supertest": "^6.3.3",
